5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1643_1053.log
== TEST (2019-04-08 18:30:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if == cervo:
 print("cervo eh patrono do harry potter: ")
else:
 print("nao eh patrono do harry potter:  ")
-- ERROR:
File "XXXX", line 5
    if == cervo:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:31:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if == ("cervo"):
 print("cervo eh patrono do harry potter: ")
else:
 print("nao eh patrono do harry potter:  ")
-- ERROR:
File "XXXX", line 5
    if == ("cervo"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:31:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if == "cervo":
 print("cervo eh patrono do harry potter: ")
else:
 print("nao eh patrono do harry potter:  ")
-- ERROR:
File "XXXX", line 5
    if == "cervo":
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:32:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if == "cervo":
 print("cervo eh patrono do harry potter: ")
else:
 print("nao eh patrono do 	harry potter:  ")
-- ERROR:
File "XXXX", line 5
    if == "cervo":
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:32:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if = "cervo":
 print("cervo eh patrono do harry potter: ")
else:
 print("nao eh patrono do 	harry potter:  ")
-- ERROR:
File "XXXX", line 5
    if = "cervo":
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:34:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if == "cervo":
 print("cervo eh patrono do harry potter: ")
else:
 print("nao eh patrono do	harry potter:  ")
-- ERROR:
File "XXXX", line 5
    if == "cervo":
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:35:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if == "cervo":
 print("cervo eh patrono do Harry potter: ")
else:
 print("nao eh patrono do	harry potter:  ")
-- ERROR:
File "XXXX", line 5
    if == "cervo":
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:35:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if == "cervo":
 print("cervo eh patrono do Harry potter: ")
else:
 print("nao eh patrono do	Harry potter:  ")
-- ERROR:
File "XXXX", line 5
    if == "cervo":
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:38:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if == "cervo":
print("cervo eh patrono do Harry potter: ")
else:
print("nao eh patrono do	Harry potter:  ")
-- ERROR:
File "XXXX", line 5
    if == "cervo":
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:39:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if == "cervo":
print("cervo eh patrono do harry potter: ")
else:
print("nao eh patrono do	harry potter:  ")
-- ERROR:
File "XXXX", line 5
    if == "cervo":
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:39:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if == "cervo":
print("cervo eh patrono do harry potter: ")
else:
print("nao eh patrono do	harry potter:  ")
-- ERROR:
File "XXXX", line 5
    if == "cervo":
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:40:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if == "cervo":
print("cervo eh patrono do harry potter: ")
else:
print("nao eh patrono do	harry potter:  ")
-- ERROR:
File "XXXX", line 5
    if == "cervo":
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:41:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if == "cervo":
print("cervo eh patrono do harry potter : ")
else:
print("nao eh patrono do harry potter :  ")
-- ERROR:
File "XXXX", line 5
    if == "cervo":
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:59:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if == "cervo":
print("cervo eh patrono do harry potter : ")
else:
print("nao eh patrono do harry potter :  ")
-- ERROR:
File "XXXX", line 5
    if == "cervo":
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:01:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(patrono=="cervo"):
print("cervo eh patrono do harry potter : ")
else:
print("nao eh patrono do harry potter :  ")
-- ERROR:
File "XXXX", line 6
    print("cervo eh patrono do harry potter : ")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:03:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if==("cervo"):
print("cervo eh patrono do harry potter : ")
else:
print("nao eh patrono do harry potter :  ")
-- ERROR:
File "XXXX", line 5
    if==("cervo"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:04:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(=="cervo"):
 print("cervo eh patrono do harry potter : ")
else:
 print("nao eh patrono do harry potter :  ")
-- ERROR:
File "XXXX", line 5
    if(=="cervo"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:05:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(==patrono"cervo"):
 print("cervo eh patrono do harry potter : ")
else:
 print("nao eh patrono do harry potter :  ")
-- ERROR:
File "XXXX", line 5
    if(==patrono"cervo"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:06:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(patrono=="cervo"):
 print("cervo eh patrono do harry potter : ")
else:
 print("nao eh patrono do harry potter :  ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(patrono=="cervo"):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:06:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(patrono=="cervo"):
 print("cervo eh patrono do harry potter : ")
else:
 print("nao eh patrono do harry potter :  ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(patrono=="cervo"):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:07:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(patrono== "cervo"):
 print("cervo eh patrono do harry potter : ")
else:
 print("nao eh patrono do harry potter :  ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(patrono== "cervo"):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:08:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
 print("cervo eh patrono do harry potter : ")
else:
 print("nao eh patrono do harry potter :  ")
-- OUTPUT:
cervo eh patrono do harry potter :
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:09:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
 print("cervo eh patrono do harry potter : ")
else:
 print("nao eh patrono do harry potter :  ")
-- EXECUTION TIME:
0.24776
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter :
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do harry potter :
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:09:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
 print("cervo eh patrono do harry potter : ")
else:
 print("nao eh patrono do harry potter :  ")
-- OUTPUT:
cervo eh patrono do harry potter :
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:10:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
 print("cervo eh patrono do harry potter : ")
else:nome
 print("nao eh patrono do harry potter :  ")
-- ERROR:
File "XXXX", line 8
    print("nao eh patrono do harry potter :  ")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:10:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
 print("cervo eh patrono do harry potter : ")
else:
 print("nao eh patrono do harry potter :  ")
-- OUTPUT:
cervo eh patrono do harry potter :
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:12:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
 print("cervo eh patrono do harry potter : ")
else:
 print("nao eh patrono do harry potter :  ")
-- EXECUTION TIME:
0.13252
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter :
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do harry potter :
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:13:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
print("cervo eh patrono do harry potter : ")
else:
 print("nao eh patrono do harry potter :  ")
-- ERROR:
File "XXXX", line 6
    print("cervo eh patrono do harry potter : ")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:13:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
	print("cervo eh patrono do harry potter : ")
else:
	print("nao eh patrono do harry potter :  ")
-- OUTPUT:
cervo eh patrono do harry potter :
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:14:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
	print("cervo eh patrono do harry potter : ")
else:
	print("nao eh patrono do harry potter :  ")
-- EXECUTION TIME:
0.20439
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter :
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do harry potter :
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:21:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
	print("cervo eh patrono do Harry Potter : ")
else:
	print("nao eh patrono do Harry Potter :  ")
-- OUTPUT:
cervo eh patrono do Harry Potter :
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:21:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
	print("cervo eh patrono do Harry Potter : ")
else:
	print("nao eh patrono do Harry Potter :  ")
-- EXECUTION TIME:
0.181318
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter :
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter :
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:24:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
	print("cervo eh patrono do Harry Potter : ")
else:
	print(" nao eh patrono do Harry Potter :  ")
-- OUTPUT:
cervo eh patrono do Harry Potter :
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:25:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
	print("cervo eh patrono do Harry Potter : ")
else:
	print(" nao eh patrono do Harry Potter :  ")
-- EXECUTION TIME:
0.188199
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter :
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter :
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:27:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
	print("cervo eh patrono do Harry Potter : ")
else:
	print(patrono+" nao eh patrono do Harry Potter :  ")
-- OUTPUT:
cervo eh patrono do Harry Potter :
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:28:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
	print("cervo eh patrono do Harry Potter : ")
else:
	print(patrono+" nao eh patrono do Harry Potter :  ")
-- OUTPUT:
cervo eh patrono do Harry Potter :
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:28:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
	print("cervo eh patrono do Harry Potter : ")
else:
	print(nome," nao eh patrono do Harry Potter :  ")
-- OUTPUT:
cervo eh patrono do Harry Potter :
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:29:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
	print("cervo eh patrono do Harry Potter : ")
else:
	print(nome," nao eh patrono do Harry Potter :  ")
-- EXECUTION TIME:
0.148314
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter :
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode  nao eh patrono do Harry Potter :
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:29:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
	print("cervo eh patrono do Harry Potter  ")
else:
	print(nome," nao eh patrono do Harry Potter   ")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:29:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
	print("cervo eh patrono do Harry Potter  ")
else:
	print(nome ," nao eh patrono do Harry Potter   ")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:30:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome =input("nome do patrono: ")
if(nome== "cervo"):
	print("cervo eh patrono do Harry Potter  ")
else:
	print(nome ," nao eh patrono do Harry Potter   ")
-- EXECUTION TIME:
0.174091
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode  nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
